src/tests/render_snapshots/snapshots/sabiql__render_snapshots__connection_management__confirm_dialog_delete_active_connection.snap
---
source: src/tests/render_snapshots/connection_management.rs
expression: output
---
test_project ▸ - ▸ -                                                                                                                 not loaded | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                     ╭ Delete Connection ───────────────────╮                                                             │
│                                       ││                     │ Delete "Production"?                 │                                                             │
│                                       │└─────────────────────│                                      │─────────────────────────────────────────────────────────────┘
│                                       │┌ [3] Result ─────────│ ⚠ This is the active connection.     │─────────────────────────────────────────────────────────────┐
│                                       ││(select a table to pr│ You will be disconnected.            │                                                             │
│                                       ││                     │                                      │                                                             │
│                                       ││                     │ This action cannot be undone.        │                                                             │
│                                       ││                     ╰ Enter: Confirm │ Esc: Cancel ────────╯                                                             │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
